<resources>
    <string name="app_name">EveryCalendar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Every Calendar</string>
    <string name="nav_header_subtitle">로그인 해주세요</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="login">로그인</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="menu_setting">설정</string>
    <string name="menu_logout">로그아웃</string>

    <string name="bottom_menu_home">홈</string>
    <string name="bottom_menu_friends">친구</string>
    <string name="bottom_menu_schedule">일정 조율</string>
    <string name="bottom_menu_calendar">일정 변경</string>

    <string name="pick_friends">친구 선택</string>
    <string name="pick_week">주 선택</string>
    <string name="pick_time">시간 선택</string>
    <string name="adjust_result">일정 조율 결과</string>

    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
</resources>
