<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TableLayout
        android:id="@+id/tbView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:stretchColumns="*"
        android:background="@drawable/btn_bolder_round"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTable">

            <TextView
                android:id="@+id/nullTxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:text="            " />

            <TextView
                android:id="@+id/sun"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center"
                android:text="@string/sunday" />

            <TextView
                android:id="@+id/mon"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center"
                android:text="@string/monday" />

            <TextView
                android:id="@+id/tue"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center"
                android:text="@string/tuesday" />

            <TextView
                android:id="@+id/wed"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center"
                android:text="@string/wednesday" />

            <TextView
                android:id="@+id/thu"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center"
                android:text="@string/thursday" />

            <TextView
                android:id="@+id/fri"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center"
                android:text="@string/friday" />

            <TextView
                android:id="@+id/sat"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:gravity="center"
                android:text="@string/saturday" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>